# visualizer

./: LICENSE.md  index.html  package-lock.json  package.json
client/: .prettierrc  index.html  package-lock.json  package.json  vite.config.js
client/src/: canvas.ts  config.json  editor.ts  main.ts  state.ts  vectorFunction.ts  wasm.ts
docker/rust/: .dockerignore  Cargo.toml  Dockerfile  Makefile  build.sh
examples/rust/: lib.rs
public/: example.js
server/: go.mod  go.sum  main.go
server/app/: app.go  container.go
server/handlers/: rust.go
server/utils/: utils.go
src/: wasm.ts
src/app/: layout.tsx  page.tsx
src/components/: Canvas.tsx  Editor.tsx
src/hooks/: index.ts
src/lib/: function.ts
