[package]
name = "visualizer-rust"
version = "0.1.0"
authors = ["Ugo Schieli <ugo.schieli@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "./src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.99"

[dependencies.web-sys]
version = "0.3.76"
features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d"]
